--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  h2 {
+    @apply font-bold text-lg;
+  }
+
+  .card-number {
+    @apply text-3xl;
+  }
+}
