--- a/src/input.css
+++ b/src/input.css
@@ -3,11 +3,14 @@
 @tailwind utilities;
 
 @layer base {
+  h1 {
+    @apply font-bold text-[16px];
+  }
   h2 {
     @apply font-bold text-lg;
   }
 
   .card-number {
-    @apply text-3xl;
+    @apply text-2xl;
   }
 }
